...
        alignItems: "center",
        justifyContent: "center",
        marginBottom: "8%",
      }}
    >
      <Pressable
        testID="center-button-add"
        onPress={onPress}
        onPressIn={handlePressIn}
        onPressOut={handlePressOut}
        android_disableSound={true}
      >
        <Animated.View
...
