...
  };

  return (
    <>
      <BoardViewport
        ref={boardViewportRef}
        testID="screen-home"
        style={styles.scroll}
        dragging={draggingId !== null}
        screenWidth={width}
        onScrollOffsetChange={handleBoardScrollOffsetChange}
        onViewportHeightChange={handleBoardViewportHeightChange}
        onContentHeightChange={handleBoardContentHeightChange}
...
